feat: config with module federation between apps(container/posts/albums)

--- a/apps/container/public/index.html
+++ b/apps/container/public/index.html
@@ -8,6 +8,8 @@
   <title>Container App</title>
 </head>
 <body>
-  <div id="containerApp"></div>
+  <div id="containerRoot"></div>
+  <div id="postsRoot"></div>
+  <div id="albumsRoot"></div>
 </body>
 </html>
